--- a/sass/modules/lists/_status.sass
+++ b/sass/modules/lists/_status.sass
@@ -22,7 +22,9 @@
 
 .bystatus
   width: rhythm(1)
-  margin-left: rhythm(-1.5)
+  margin:
+    left: rhythm(-1.5)
+    right: 0
 
 .status
   position: absolute
